Restructure Components and add Appliance and EV Services